babel-latest to babel-env upgrade

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "share": "npm-run-all --parallel open:src localtunnel",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
-   },
+  },
   "author": "Fabrizio Sanmartino",
   "license": "MIT",
   "dependencies": {
@@ -23,7 +23,7 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
-    "babel-preset-latest": "6.24.1",
+    "babel-preset-env": "1.6.0",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "chalk": "2.1.0",
