--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-latest": "6.24.1",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "chalk": "2.1.0",
