--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "open:dst": "babel-node buildScripts/distServer.js",
     "prebuild": "npm-run-all clean-dist test lint",
     "build": "babel-node buildScripts/build.js",
-    "postbuild": "npm-run-all  --parallel start-mockapi open:dst"
+    "postbuild": "npm-run-all  --parallel start-mockapi open:dst",
+    "deploy": "surge ./dist"
   },
   "author": "Fabrizio Sanmartino",
   "license": "MIT",
@@ -58,6 +59,7 @@
     "open": "0.0.5",
     "rimraf": "2.6.1",
     "style-loader": "0.18.2",
+    "surge": "^0.19.0",
     "webpack": "3.5.6",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.19.1",
